<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinLight自由彩灯</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
     <string name="all_bulb">全部灯泡</string>
    <string name="default_text">请打开灯泡电源点击搜索按钮重新搜索 或者点击购买按钮购买新灯泡</string>
    <string name="bluetoothon">蓝牙已经打开</string>
    <string name="bluetoothoff">蓝牙已经关闭</string>
    <string name="disconnect">全部断开</string>
    <string name="refresh">刷新</string>
    <string name="connect">全部连接</string>
    <string name="statechange">切换状态 :</string>
    <string name="delaytime">还有 @time 分钟</string>
    <string name="function">功能列表</string>
    <string name="changePic">点击圆圈中间切换图片</string>
    <string name="ble_not_supported">设备不支持BLE</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="add">增加</string>
    <string name="delete">删除</string>
    <string name="notice">提示</string>
    <string name="app_name_en">LinLight</string>
    <string name="add_timer">增加定时器</string>
    <string name="add_wireless_switch">增加无线开关</string>
    
    <!-- 主页面 -->
    <string name="main_page_scene">场景</string>
    <string name="main_page_light_list">灯列表</string>
    <string name="main_page_music">音乐律动</string>
    <string name="main_page_shake">摇一摇</string>
    <string name="scan_button">扫描</string>  
    <!-- 设置页面 -->
    <string name="setting_timer_list">定时器设置列表</string>
    <string name="setting_timer">定时器设置</string>
    <string name="setting_wireless_switch_list">无线开关设置列表</string>
    <string name="setting_wireless_switch">无线开关设置</string>
    <string name="setting_wireless_switch_add">无线开关设置</string>
    <string name="setting_app_respon_list">应用联动设置列表</string>
    <string name="setting_app_respon">应用联动设置</string>
    
    <!-- 开关设置 -->
    <string name="setting_switch_prompt">选择要添加的开关类型并按下实体开关的任意键</string>
	
    <!-- 选择相片 -->
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    
</resources>
