<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/left_bg" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#aa000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/search_list_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30.0dip"
            android:layout_marginTop="25.0dip"
            android:background="@android:color/transparent"
            android:paddingLeft="15.0dip"
            android:text="@string/function"
            android:textSize="30.0sp" />

        <RelativeLayout
            android:id="@+id/main_page_scene"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/search_list_bg"
            android:clickable="true"
            android:paddingLeft="15.0dip" >

            <ImageView
                android:id="@+id/icon01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/brightness" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon01"
                android:paddingLeft="10.0dip"
                android:text="@string/main_page_scene"
                android:textColor="@android:color/darker_gray"
                android:textSize="20.0sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1.0dip" />

        <RelativeLayout
            android:id="@+id/main_page_light_list"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/search_list_bg"
            android:clickable="true"
            android:paddingLeft="15.0dip" >

            <ImageView
                android:id="@+id/icon02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon02"
                android:paddingLeft="10.0dip"
                android:text="@string/main_page_light_list"
                android:textColor="@android:color/darker_gray"
                android:textSize="20.0sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1.0dip" />

        <RelativeLayout
            android:id="@+id/main_page_music"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/search_list_bg"
            android:clickable="true"
            android:paddingLeft="15.0dip" >

            <ImageView
                android:id="@+id/icon03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/colorflow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon03"
                android:paddingLeft="10.0dip"
                android:text="@string/main_page_music"
                android:textColor="@android:color/darker_gray"
                android:textSize="20.0sp"
                android:typeface="normal" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1.0dip" />

        <RelativeLayout
            android:id="@+id/main_page_shake"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:layout_marginBottom="5.0dip"
            android:background="@drawable/search_list_bg"
            android:clickable="true"
            android:paddingLeft="15.0dip" >

            <ImageView
                android:id="@+id/icon03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/music1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/icon03"
                android:paddingLeft="10.0dip"
                android:text="@string/main_page_shake"
                android:textColor="@android:color/darker_gray"
                android:textSize="20.0sp" />
        </RelativeLayout>
      
    </LinearLayout>

</FrameLayout>